[CHK-2380] deployment strategy (#402)
* feat: update openapi with new ApmAuthRequestDetails into auth-request

* feat: invoke payment method for retrieve BRAND for email

* feat: added logic for handle apm payment

* fixed tests

* fixed: log into walletNpgApmPaymentFlow

* feat: added tests for payment gateway client

* feat: added test for TransactionRequestAuthorizationHandlerTest

* feat: added test v2/TransactionService.java

* feat: added case log for getLogo

* fix: outcome url

* feat: added client id into GET payment method by id request

* Update src/test/java/it/pagopa/transactions/services/v1/TransactionServiceTests.java

Co-authored-by: Pietro Tota <115724836+pietro-tota@users.noreply.github.com>

* fix: added method management into test

* feat: merge with main branch

* fix: restore branch for payment method generation

* fix: added branch commit

* fix: restore branch main

* enable autoscaling, maxSurge to 1 and maxUnavailable to 0 for dev env

* reduce replicas

* reduce replicas

* set deployment replicas to 3

* set replicas to 1 in deployment section

* add graceful stop shutdown

* set rolling update strategy for prod

* restore logiback

* move logbak conf file in original position

* set explicit autoscaling enabled to false

* restore helm dev values

* trigger CR pipeline

* set enable false explicitly

* set autoscaling enabled with different parameters in dev

* set autoscaling to false and set min and max to 1

---------

Co-authored-by: Fernando-Granato <fernando.granato@pagopa.it>
Co-authored-by: Fernando-Granato <117268775+Fernando-Granato@users.noreply.github.com>
Co-authored-by: Pietro Tota <115724836+pietro-tota@users.noreply.github.com>
Co-authored-by: Gianluca Ciuffa <gianlucaciuffa@MacBook-Pro-di-Gianluca.local>
Co-authored-by: Gianluca Ciuffa <gianlucaciuffa@MBP-di-Gianluca.homenet.telecomitalia.it>

--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -22,6 +22,7 @@ microservice-chart:
     periodSeconds: 10
   deployment:
     create: true
+    replicas: 1
   service:
     create: true
     type: ClusterIP
@@ -50,8 +51,9 @@ microservice-chart:
       memory: "512Mi"
       cpu: "300m"
   autoscaling:
+    enable: false
     minReplica: 1
-    maxReplica: 2
+    maxReplica: 1
     pollingInterval: 30 # seconds
     cooldownPeriod: 300 # seconds
     triggers:
