set autoscaling with one replicas in deployments section

--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -51,9 +51,9 @@ microservice-chart:
       memory: "512Mi"
       cpu: "300m"
   autoscaling:
-    enable: false
-    minReplica: 1
-    maxReplica: 1
+    enable: true
+    minReplica: 3
+    maxReplica: 10
     pollingInterval: 30 # seconds
     cooldownPeriod: 300 # seconds
     triggers:
