[CHK-2380] add deployment node for prod (#409)
* add deployment node

* swap deployment interlnal node

* Update helm/values-uat.yaml

Co-authored-by: Pietro Tota <115724836+pietro-tota@users.noreply.github.com>

---------

Co-authored-by: Gianluca Ciuffa <gianlucaciuffa@MBP-di-Gianluca.homenet.telecomitalia.it>
Co-authored-by: Pietro Tota <115724836+pietro-tota@users.noreply.github.com>

--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -125,6 +125,9 @@ microservice-chart:
     initialDelaySeconds: 60
     failureThreshold: 6
     periodSeconds: 10
+  deployment:
+    create: true
+    replicas: 1
   service:
     create: true
     type: ClusterIP
