--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <java.version>17</java.version>
         <spring-cloud-azure.version>4.0.0</spring-cloud-azure.version>
         <jacoco.version>0.8.8</jacoco.version>
-        <pagopa-ecommerce-commons.version>1.5.0</pagopa-ecommerce-commons.version>
+        <pagopa-ecommerce-commons.version>1.6.0</pagopa-ecommerce-commons.version>
         <spotless.version>2.28.0</spotless.version>
         <ecs-logging-version>1.5.0</ecs-logging-version>
         <mock-web-server.version>4.11.0</mock-web-server.version>
@@ -370,6 +370,7 @@
                         <configuration>
                             <inputSpec>https://raw.githubusercontent.com/pagopa/pagopa-infra/main/src/core/api/payment_transactions_gateway_api/internal/v1/_openapi.json.tpl</inputSpec>
                             <generatorName>java</generatorName>
+                            <generatorName>java</generatorName>
                             <library>webclient</library>
                             <generateApiDocumentation>false</generateApiDocumentation>
                             <generateApiTests>false</generateApiTests>
@@ -508,8 +509,6 @@
                     <connectionUrl>scm:git:https://github.com/pagopa/pagopa-ecommerce-commons.git</connectionUrl>
                     <scmVersionType>tag</scmVersionType>
                     <scmVersion>${pagopa-ecommerce-commons.version}</scmVersion>
-                    <scmVersionType>branch</scmVersionType>
-                    <scmVersion>CHK-2369-add-new-closure-requested-event</scmVersion>
                     <goals>install -DskipTests</goals>
                 </configuration>
                 <executions>
