fix(spec misalignment): rename misaligned fields

--- a/api-spec/v1/transactions-api.yaml
+++ b/api-spec/v1/transactions-api.yaml
@@ -709,7 +709,7 @@ components:
           properties:
             feeTotal:
               $ref: "#/components/schemas/AmountEuroCents"
-            paymentGateway:
+            gateway:
               type: string
               example: 'XPAY'
             sendPaymentResultOutcome:
@@ -720,7 +720,7 @@ components:
                 - NOT_RECEIVED
             authorizationCode:
               type: string
-            authorizationErrorCode:
+            errorCode:
               type: string
           required:
             - status
