--- a/api-spec/v1/transactions-api.yaml
+++ b/api-spec/v1/transactions-api.yaml
@@ -622,12 +622,14 @@ components:
             - $ref: '#/components/schemas/OutcomeVposGateway'
             - $ref: '#/components/schemas/OutcomeXpayGateway'
             - $ref: '#/components/schemas/OutcomeNpgGateway'
+            - $ref: '#/components/schemas/OutcomeRedirectGateway'
           discriminator:
             propertyName: paymentGatewayType
             mapping:
               XPAY: "#/components/schemas/OutcomeXpayGateway"
               VPOS: "#/components/schemas/OutcomeVposGateway"
               NPG: '#/components/schemas/OutcomeNpgGateway'
+              REDIRECT: '#/components/schemas/OutcomeRedirectGateway'
         timestampOperation:
           type: string
           format: date-time
@@ -1202,6 +1204,32 @@ components:
       required:
         - paymentGatewayType
         - operationResult
+    OutcomeRedirectGateway:
+      type: object
+      properties:
+        paymentGatewayType:
+          type: string
+          example: REDIRECT
+          description: disciminator field. fixed value `REDIRECT`
+        pspTransactionId:
+          type: string
+          description: PSP transaction unique ID
+        outcome:
+          $ref: 'https://raw.githubusercontent.com/pagopa/pagopa-api/SANP3.6.1/openapi/redirect.yaml#/components/schemas/AuthorizationOutcome'
+        pspId:
+          type: string
+          description: PSP ID from which the authorization outcome request come
+        authorizationCode:
+          type: string
+          description: payment authorization code
+        errorCode:
+          type: string
+          description: payment error code
+      required:
+        - paymentGatewayType
+        - pspId
+        - outcome
+        - pspTransactionId
   requestBodies:
     NewTransactionRequest:
       required: true
