fix(deps): mark `netty-resolver-dns-native-macos` dependency for test as it causes memleak in prod

--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,7 @@
             <artifactId>netty-resolver-dns-native-macos</artifactId>
             <version>4.1.82.Final</version>
             <classifier>osx-aarch_64</classifier>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.opentelemetry</groupId>
