feat: managed correlationId as UUID

--- a/api-spec/v2/transactions-api.yaml
+++ b/api-spec/v2/transactions-api.yaml
@@ -162,7 +162,7 @@ components:
         correlationId:
           description: NPG correlation id
           type: string
-          example: correlationId
+          format: uuid
       required:
         - paymentNotices
         - email
