--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -86,11 +86,12 @@ microservice-chart:
       SESSION_URL_NOTIFICATION_URL: "https://api.platform.pagopa.it/ecommerce/npg/notifications/v1/sessions/{orderId}/outcomes?sessionToken={sessionToken}"
       JWT_NPG_NOTIFICATION_VALIDITY_TIME: "900"
       CHECKOUT_REDIRECT_PSP_LIST: ""
-      CHECKOUT_REDIRECT_URL_MAPPING: >
-        { PSP1:'http://localhost' }
+      NODE_FORWARDER_URL: "http://TBD"
+    CHECKOUT_REDIRECT_URL_MAPPING: >
+      { PSP1:'http://localhost' }
 
-      CHECKOUT_REDIRECT_READ_TIMEOUT: "10000"
-      CHECKOUT_REDIRECT_CONNECTION_TIMEOUT: "10000"
+      NODE_FORWARDER_READ_TIMEOUT: "10000"
+      NODE_FORWARDER_CONNECTION_TIMEOUT: "10000"
       CHECKOUT_REDIRECT_LOGO_MAPPING: >
         { PSP1:'https://host/assets/logo.png' }
 
@@ -107,7 +108,7 @@ microservice-chart:
       NPG_API_KEY: npg-api-key
       NPG_CARDS_PSP_KEYS: npg-cards-psp-keys
       JWT_NPG_NOTIFICATION_SECRET: npg-notification-signing-key
-      CHECKOUT_REDIRECT_PSP_KEYS: checkout-redirect-psp-keys
+      NODE_FORWARDER_API_KEY: checkout-redirect-forwarder-api-key
   image:
     repository: pagopapcommonacr.azurecr.io/pagopaecommercetransactionsservice
     tag: "1.16.1"
@@ -243,11 +244,12 @@ microservice-chart:
     SESSION_URL_NOTIFICATION_URL: "https://api.platform.pagopa.it/ecommerce/npg/notifications/v1/sessions/{orderId}/outcomes?sessionToken={sessionToken}"
     JWT_NPG_NOTIFICATION_VALIDITY_TIME: "900"
     CHECKOUT_REDIRECT_PSP_LIST: ""
+    NODE_FORWARDER_URL: "http://TBD"
     CHECKOUT_REDIRECT_URL_MAPPING: >
       { PSP1:'http://localhost' }
 
-    CHECKOUT_REDIRECT_READ_TIMEOUT: "10000"
-    CHECKOUT_REDIRECT_CONNECTION_TIMEOUT: "10000"
+    NODE_FORWARDER_READ_TIMEOUT: "10000"
+    NODE_FORWARDER_CONNECTION_TIMEOUT: "10000"
     CHECKOUT_REDIRECT_LOGO_MAPPING: >
       { PSP1:'https://host/assets/logo.png' }
 
@@ -266,7 +268,7 @@ microservice-chart:
     NPG_API_KEY: npg-api-key
     NPG_CARDS_PSP_KEYS: npg-cards-psp-keys
     JWT_NPG_NOTIFICATION_SECRET: npg-notification-signing-key
-    CHECKOUT_REDIRECT_PSP_KEYS: checkout-redirect-psp-keys
+    NODE_FORWARDER_API_KEY: checkout-redirect-forwarder-api-key
   keyvault:
     name: "pagopa-p-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
