--- a/pom.xml
+++ b/pom.xml
@@ -430,6 +430,28 @@
                             <modelNameSuffix>dto</modelNameSuffix>
                         </configuration>
                     </execution>
+                    <execution>
+                        <id>node-forwarder-api-v1</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <inputSpec>https://raw.githubusercontent.com/pagopa/pagopa-node-forwarder/main/openapi/openapi.json</inputSpec>
+                            <generatorName>java</generatorName>
+                            <library>webclient</library>
+                            <generateApiDocumentation>false</generateApiDocumentation>
+                            <generateApiTests>false</generateApiTests>
+                            <generateModelTests>false</generateModelTests>
+                            <generateSupportingFiles>true</generateSupportingFiles>
+                            <configOptions>
+                                <swaggerAnnotations>false</swaggerAnnotations>
+                                <openApiNullable>false</openApiNullable>
+                            </configOptions>
+                            <modelPackage>it.pagopa.generated.ecommerce.node.forwarder.v1.dto</modelPackage>
+                            <apiPackage>it.pagopa.generated.ecommerce.node.forwarder.v1.api</apiPackage>
+                            <modelNameSuffix>dto</modelNameSuffix>
+                        </configuration>
+                    </execution>
             </executions>
             </plugin>
             <plugin>
@@ -510,6 +532,8 @@
                     <connectionUrl>scm:git:https://github.com/pagopa/pagopa-ecommerce-commons.git</connectionUrl>
                     <scmVersionType>tag</scmVersionType>
                     <scmVersion>${pagopa-ecommerce-commons.version}</scmVersion>
+                    <scmVersionType>branch</scmVersionType>
+                    <scmVersion>CHK-2433-node-forwarder-api-client</scmVersion>
                     <goals>install -DskipTests</goals>
                 </configuration>
                 <executions>
