--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -161,7 +161,7 @@ microservice-chart:
     NPG_API_KEY: npg-api-key
     NPG_CARDS_PSP_KEYS: npg-cards-psp-keys
     JWT_NPG_NOTIFICATION_SECRET: npg-notification-signing-key
-    NODE_FORWARDER_API_KEY: checkout-redirect-forwarder-api-key
+    NODE_FORWARDER_API_KEY: node-forwarder-api-key
   keyvault:
     name: "pagopa-d-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
