--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -80,7 +80,7 @@ microservice-chart:
       CHECKOUT_BASE_PATH: "https://checkout.pagopa.it"
       ECOMMERCE_EVENT_VERSION: "V1"
       SEND_PAYMENT_RESULT_FOR_TX_EXPIRED_ENABLED: "true"
-      SESSION_URL_BASEPATH: "https://checkout.pagopa.it"
+      SESSION_URL_BASEPATH: "https://dev.checkout.pagopa.it"
       SESSION_URL_OUTCOME_SUFFIX: "/ecommerce-fe/esito"
       SESSION_URL_CANCEL_SUFFIX: "/ecommerce-fe/cancel"
       SESSION_URL_NOTIFICATION_URL: "https://api.platform.pagopa.it/ecommerce/npg/notifications/v1/sessions/{orderId}/outcomes?sessionToken={sessionToken}"
@@ -237,7 +237,7 @@ microservice-chart:
     CHECKOUT_BASE_PATH: "https://checkout.pagopa.it"
     ECOMMERCE_EVENT_VERSION: "V1"
     SEND_PAYMENT_RESULT_FOR_TX_EXPIRED_ENABLED: "true"
-    SESSION_URL_BASEPATH: "https://checkout.pagopa.it"
+    SESSION_URL_BASEPATH: "https://dev.checkout.pagopa.it"
     SESSION_URL_OUTCOME_SUFFIX: "/ecommerce-fe/esito"
     SESSION_URL_CANCEL_SUFFIX: "/ecommerce-fe/cancel"
     SESSION_URL_NOTIFICATION_URL: "https://api.platform.pagopa.it/ecommerce/npg/notifications/v1/sessions/{orderId}/outcomes?sessionToken={sessionToken}"
