--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -137,7 +137,7 @@ microservice-chart:
     SESSION_URL_NOTIFICATION_URL: "https://api.dev.platform.pagopa.it/ecommerce/npg/notifications/v1/sessions/{orderId}/outcomes?sessionToken={sessionToken}"
     JWT_NPG_NOTIFICATION_VALIDITY_TIME: "900"
     CHECKOUT_REDIRECT_PSP_LIST: ""
-    NODE_FORWARDER_URL: "http://TBD"
+    NODE_FORWARDER_URL: "https://api.uat.platform.pagopa.it/pagopa-node-forwarder/api/v1"
     CHECKOUT_REDIRECT_URL_MAPPING: >
       { PSP1:'http://localhost' }
 
