--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,7 @@ TRANSACTION_CLOSE_PAYMENT_RETRY_QUEUE_NAME=pagopa-ecommerce-transactions-close-p
 TRANSACTION_REFUND_QUEUE_NAME=pagopa-ecommerce-transactions-refund-queue
 TRANSACTION_CLOSE_PAYMENT_QUEUE_NAME=pagopa-ecommerce-transactions-close-payment-queue
 TRANSACTION_NOTIFICATIONS_QUEUE_NAME=pagopa-ecommerce-transactions-notifications-queue
+TRANSACTIONS_AUTHORIZATION_REQUESTED_QUEUE_NAME=pagopa-ecommerce-transactions-authorization-requested-queue
 
 NOTIFICATIONS_SERVICE_API_KEY=api-key
 NOTIFICATIONS_SERVICE_URI="http://pagopa-ecommerce-traefik/notifications-service"
