--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,6 +52,7 @@ azurestorage.queues.transactionrefund.name=${TRANSACTION_REFUND_QUEUE_NAME}
 azurestorage.queues.transactionclosepaymentretry.name=${TRANSACTION_CLOSE_PAYMENT_RETRY_QUEUE_NAME}
 azurestorage.queues.transactionclosepayment.name=${TRANSACTION_CLOSE_PAYMENT_QUEUE_NAME}
 azurestorage.queues.transactionnotificationrequested.name=${TRANSACTION_NOTIFICATIONS_QUEUE_NAME}
+azurestorage.queues.transactionauthorizationrequested.name=${TRANSACTIONS_AUTHORIZATION_REQUESTED_QUEUE_NAME}
 azurestorage.queues.transientQueues.ttlSeconds=${TRANSIENT_QUEUES_TTL_SECONDS:604800}
 
 spring.devtools.restart.enabled=false
