--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -46,6 +46,7 @@ azurestorage.queues.transactionrefund.name=refund-queue
 azurestorage.queues.transactionclosepaymentretry.name=closure-retry-queue
 azurestorage.queues.transactionclosepayment.name=closure-queue
 azurestorage.queues.transactionnotificationrequested.name=notification-requested-queue
+azurestorage.queues.transactionauthorizationrequested.name=authorization-requested-queue
 
 payment.token.validity=120
 transactions.ecommerce.retry.offset=20
