--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -82,6 +82,7 @@ npg.connectionTimeout=${NPG_CONNECTION_TIMEOUT}
 npg.client.apiKey=${NPG_API_KEY}
 npg.authorization.cards.keys=${NPG_CARDS_PSP_KEYS}
 npg.authorization.cards.pspList=${NPG_CARDS_PSP_LIST}
+npg.authorization.request.timeout=${NPG_AUTHORIZATION_REQUEST_TIMEOUT}
 ecommerce.event.version=${ECOMMERCE_EVENT_VERSION}
 
 ecommerce.send-payment-result-for-tx-expired.enabled=${SEND_PAYMENT_RESULT_FOR_TX_EXPIRED_ENABLED}
