add seconds to property name

--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -82,7 +82,7 @@ npg.connectionTimeout=10000
 npg.client.apiKey=npg_key
 npg.authorization.cards.keys={"psp1":"key1","psp2":"key2"}
 npg.authorization.cards.pspList=psp1,psp2
-npg.authorization.request.timeout=600
+npg.authorization.request.timeout.seconds=600
 ecommerce.event.version=V2
 transactionDocument.ttl=1000
 ecommerce.send-payment-result-for-tx-expired.enabled=false
