--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -46,6 +46,7 @@ azurestorage.queues.transactionrefund.name=refund-queue
 azurestorage.queues.transactionclosepaymentretry.name=closure-retry-queue
 azurestorage.queues.transactionclosepayment.name=closure-queue
 azurestorage.queues.transactionnotificationrequested.name=notification-requested-queue
+azurestorage.queues.transactionauthorizationrequested.name=authorization-requested-queue
 
 payment.token.validity=120
 transactions.ecommerce.retry.offset=20
@@ -81,6 +82,7 @@ npg.connectionTimeout=10000
 npg.client.apiKey=npg_key
 npg.authorization.cards.keys={"psp1":"key1","psp2":"key2"}
 npg.authorization.cards.pspList=psp1,psp2
+npg.authorization.request.timeout.seconds=600
 ecommerce.event.version=V2
 transactionDocument.ttl=1000
 ecommerce.send-payment-result-for-tx-expired.enabled=false
