--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,6 +52,7 @@ azurestorage.queues.transactionrefund.name=${TRANSACTION_REFUND_QUEUE_NAME}
 azurestorage.queues.transactionclosepaymentretry.name=${TRANSACTION_CLOSE_PAYMENT_RETRY_QUEUE_NAME}
 azurestorage.queues.transactionclosepayment.name=${TRANSACTION_CLOSE_PAYMENT_QUEUE_NAME}
 azurestorage.queues.transactionnotificationrequested.name=${TRANSACTION_NOTIFICATIONS_QUEUE_NAME}
+azurestorage.queues.transactionauthorizationrequested.name=${TRANSACTIONS_AUTHORIZATION_REQUESTED_QUEUE_NAME}
 azurestorage.queues.transientQueues.ttlSeconds=${TRANSIENT_QUEUES_TTL_SECONDS:604800}
 
 spring.devtools.restart.enabled=false
@@ -81,6 +82,7 @@ npg.connectionTimeout=${NPG_CONNECTION_TIMEOUT}
 npg.client.apiKey=${NPG_API_KEY}
 npg.authorization.cards.keys=${NPG_CARDS_PSP_KEYS}
 npg.authorization.cards.pspList=${NPG_CARDS_PSP_LIST}
+npg.authorization.request.timeout.seconds=${NPG_AUTHORIZATION_REQUEST_TIMEOUT_SECONDS}
 ecommerce.event.version=${ECOMMERCE_EVENT_VERSION}
 
 ecommerce.send-payment-result-for-tx-expired.enabled=${SEND_PAYMENT_RESULT_FOR_TX_EXPIRED_ENABLED}
