--- a/.env.example
+++ b/.env.example
@@ -77,7 +77,7 @@ ECOMMERCE_EVENT_VERSION=V2
 SEND_PAYMENT_RESULT_FOR_TX_EXPIRED_ENABLED=true
 
 SESSION_URL_BASEPATH="https://localhost:1234"
-SESSION_URL_OUTCOME_SUFFIX="/esito"
+SESSION_URL_OUTCOME_SUFFIX="/esito#clientId={clientId}&transactionId={transactionId}&sessionToken={sessionToken}"
 SESSION_URL_CANCEL_SUFFIX="/cancel"
 SESSION_URL_NOTIFICATION_URL="http://localhost/ecommerce/npg/notifications/v1/sessions/{orderId}/outcomes?sessionToken={sessionToken}"
 
