--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -88,7 +88,7 @@ transactionDocument.ttl=1000
 ecommerce.send-payment-result-for-tx-expired.enabled=false
 
 SESSION_URL_BASEPATH="https://localhost:1234"
-SESSION_URL_OUTCOME_SUFFIX="/esito"
+SESSION_URL_OUTCOME_SUFFIX="/ecommerce-fe/esito#clientId={clientId}&transactionId={transactionId}&sessionToken={sessionToken}"
 SESSION_URL_CANCEL_SUFFIX="/cancel"
 SESSION_URL_NOTIFICATION_URL:"http://localhost/ecommerce/npg/notifications/v1/sessions/{orderId}/outcomes?sessionToken={sessionToken}"
 
