--- a/pom.xml
+++ b/pom.xml
@@ -508,8 +508,8 @@
                 <configuration>
                     <skipCheckoutIfExists>false</skipCheckoutIfExists>
                     <connectionUrl>scm:git:https://github.com/pagopa/pagopa-ecommerce-commons.git</connectionUrl>
-                    <scmVersionType>tag</scmVersionType>
-                    <scmVersion>${pagopa-ecommerce-commons.version}</scmVersion>
+                    <scmVersionType>branch</scmVersionType>
+                    <scmVersion>memleak-test-no-agent</scmVersion>
                     <goals>install -DskipTests</goals>
                 </configuration>
                 <executions>
